[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "versions_kaneryu"
version = "1.0.0"
authors = [
  { name="Kaneryu", email="hello@kan.moe" },
]

[tool.pytest.ini_options]
python_paths = ["D:\\sss\\versions"]

description = "Simple version class"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kaneryu/versions"
Issues = "https://github.com/kaneryu/versions/issues"